syntax="proto3";
package store;


message EntityID {
    
    string id = 1;

}
