syntax="proto3";
package store;

import "store/common.proto";
import "google/protobuf/timestamp.proto";


enum SchedulerType {
    PUBLIC = 0;
    PRIVATE = 1;
}

enum SchedulerStatus {
    CREATED = 0;
    SUSPENDED = 1;
    DELETED = 3;
}

message SchedulerEntity {
    EntityID id = 1;
    string name = 2;
    string description = 3;
    string expression = 4;
    repeated string labels = 5;
    SchedulerType type = 6;
    SchedulerStatus status = 7;
    map<string,string> properties = 9;
    google.protobuf.Timestamp startDate = 10;
    google.protobuf.Timestamp endDate = 11;

}
